load("@rules_cc//cc:defs.bzl", "cc_test")
load("//tools:no_undefined.bzl", "cc_library")

filegroup(
    name = "public_headers",
    srcs = ["toxav.h"],
    visibility = ["//c-toxcore:__pkg__"],
)

cc_library(
    name = "public",
    hdrs = [":public_headers"],
)

cc_library(
    name = "ring_buffer",
    srcs = ["ring_buffer.c"],
    hdrs = ["ring_buffer.h"],
    deps = ["//c-toxcore/toxcore:ccompat"],
)

cc_test(
    name = "ring_buffer_test",
    size = "small",
    srcs = ["ring_buffer_test.cc"],
    deps = [
        ":ring_buffer",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "rtp_test",
    size = "small",
    srcs = ["rtp_test.cc"],
    deps = [
        ":toxav",
        "//c-toxcore/toxcore:crypto_core",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "toxav",
    srcs = [
        "audio.c",
        "bwcontroller.c",
        "groupav.c",
        "msi.c",
        "rtp.c",
        "toxav.c",
        "toxav_old.c",
        "video.c",
    ],
    hdrs = [
        "audio.h",
        "bwcontroller.h",
        "groupav.h",
        "msi.h",
        "rtp.h",
        "toxav.api.h",
        "toxav.h",
        "toxav_hacks.h",
        "video.h",
    ],
    visibility = ["//c-toxcore:__subpackages__"],
    deps = [
        ":ring_buffer",
        "//c-toxcore/toxcore",
        "@libvpx",
        "@opus",
    ],
)

sh_library(
    name = "cimple_files",
    srcs = glob([
        "*.c",
        "*.h",
    ]),
    visibility = ["//c-toxcore/testing:__pkg__"],
)
