load("@rules_cc//cc:defs.bzl", "cc_test")
load("//tools:no_undefined.bzl", "cc_library")

package(features = ["layering_check"])

exports_files(
    srcs = ["toxav.h"],
    visibility = ["//c-toxcore:__pkg__"],
)

# Private library with the public API header in it because in toxav, lots of
# things depend on the public API header.
cc_library(
    name = "public_api",
    hdrs = ["toxav.h"],
)

cc_library(
    name = "dummy_ntp",
    srcs = ["dummy_ntp.c"],
    hdrs = ["dummy_ntp.h"],
    deps = ["//c-toxcore/toxcore:ccompat"],
)

cc_library(
    name = "vpx_codec",
    srcs = ["codecs/vpx/codec.c"],
    hdrs = [
        "audio.h",
        "codecs/toxav_codecs.h",
        "msi.h",
        "rtp.h",
        "tox_generic.h",
        "toxav.h",
        "video.h",
    ],
    copts = ["-Wno-error"],
    deps = [
        ":bwcontroller",
        ":rtp",
        "//c-toxcore/toxcore:Messenger",
        "//c-toxcore/toxcore:ccompat",
        "@libvpx",
        "@opus",
    ],
)

cc_library(
    name = "h264_codec",
    srcs = ["codecs/h264/codec.c"],
    hdrs = [
        "audio.h",
        "codecs/toxav_codecs.h",
        "msi.h",
        "rtp.h",
        "tox_generic.h",
        "toxav.h",
        "video.h",
    ],
    copts = ["-Wno-error"],
    deps = [
        ":bwcontroller",
        ":rtp",
        "//c-toxcore/toxcore:Messenger",
        "//c-toxcore/toxcore:ccompat",
        "@ffmpeg",
        "@libvpx",
        "@opus",
        "@x264//:core",
    ],
)

cc_library(
    name = "ts_buffer",
    srcs = ["ts_buffer.c"],
    hdrs = ["ts_buffer.h"],
    deps = [
        ":rtp",
        "//c-toxcore/toxcore:ccompat",
    ],
)

cc_library(
    name = "ring_buffer",
    srcs = ["ring_buffer.c"],
    hdrs = ["ring_buffer.h"],
    deps = ["//c-toxcore/toxcore:ccompat"],
)

cc_test(
    name = "ring_buffer_test",
    size = "small",
    srcs = ["ring_buffer_test.cc"],
    deps = [
        ":ring_buffer",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "rtp_test",
    size = "small",
    srcs = ["rtp_test.cc"],
    deps = [
        ":toxav",
        "//c-toxcore/toxcore:crypto_core",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "toxav",
    srcs = [
        "audio.c",
        "bwcontroller.c",
        "groupav.c",
        "msi.c",
        "rtp.c",
        "toxav.c",
        "toxav_old.c",
        "video.c",
    ],
    hdrs = [
        "audio.h",
        "bwcontroller.h",
        "groupav.h",
        "msi.h",
        "rtp.h",
        "toxav.h",
        "toxav_hacks.h",
        "video.h",
    ],
    visibility = ["//c-toxcore:__subpackages__"],
    deps = [
        ":ring_buffer",
        "//c-toxcore/toxcore:ccompat",
        "//c-toxcore/toxcore:logger",
        "//c-toxcore/toxcore:mono_time",
        "//c-toxcore/toxcore:net_crypto",
        "//c-toxcore/toxcore:network",
        "//c-toxcore/toxcore:util",
        "//c-toxcore/toxcore:tox",
        "@libvpx",
        "@opus",
    ],
)

sh_library(
    name = "cimple_files",
    srcs = glob([
        "*.c",
        "*.h",
    ]),
    visibility = ["//c-toxcore/testing:__pkg__"],
)
